--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>somos-todos-jao-2017</title>
+    <title>Somos Todos JÃO</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app-jao"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
