--- a/index.html
+++ b/index.html
@@ -2,10 +2,59 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="defaultLanguage" content="pt-BR">
+    <meta name="availableLanguages" content="pt-BR">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="language" content="pt_BR">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="7 days">
+    <meta name="copyright" content="S1X Tecnologia">
+    <meta name="author" content="Luigui Delyer">
+    <meta name="robots" content="all, index, follow">
+    <meta name="description" content="O 'Meu Nome é Jão Festival Cultural' tem como por objetivo estimular a produção e divulgar os artistas do interior de São Paulo.">
+    <meta name="keywords" content="Fernandópolis, cultura, artistas locais, artistas, artesanato, dança, música, musica, danca, teatro, fotografia, shopping center fernandópolis, meu nome é jão, jão">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:site_name" content="MEU NOME É JÃO FESTIVAL CULTURAL">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MEU NOME É JÃO FESTIVAL CULTURAL">
+    <meta property="og:description" content="O 'Meu Nome é Jão Festival Cultural' tem como por objetivo estimular a produção e divulgar os artistas do interior de São Paulo.">
+    <meta property="og:url" content="http://www.somostodosjao.com.br">
+    <meta property="og:image" content="http://www.somostodosjao.com.br/static/mnej-site-facebook.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="833">
+    <meta property="og:image:height" content="833">
+    <meta property="fb:page_id" content="792625494094439">
+    <meta property="fb:admins" content="100001277522703">
+    <link rel="icon" sizes="192x192" href="static/drawable-xxxhdpi-icon.png">
+    <link rel="shortcut icon" sizes="16x16" href="static/icon_16_1x.png">
+    <link rel="shortcut icon" sizes="32x32" href="static/icon_32_1x.png">
+    <link rel="shortcut icon" sizes="48x48" href="static/drawable-mdpi-icon.png">
+    <link rel="shortcut icon" sizes="64x64" href="static/icon_32_2x.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="static/icon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="icon_29_2x-1.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="static/drawable-hdpi-icon.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="static/icon_40_3x.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="static/drawable-xxhdpi-icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="static/icon_76_2x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="static/icon_60_3x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="static/icon_76_2x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/drawable-xxhdpi-icon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="static/icon_40_3x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="static/icon_76_1x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/drawable-hdpi-icon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="static/icon_29_2x-1.png">
+    <meta name="application-name" content="MEU NOME É JÃO'">
     <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700,900'>
     <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css'>
-    <title>Somos Todos JÃO</title>
+    <title>Meu Nome é JÃO Festival Cultural</title>
   </head>
   <body>
     <div id="app-jao"></div>
